<resources>
    <!--    login string-->
    <string name="app_name">Beary Good Connection</string>
    <string name="textView_login_title">Welcome</string>
    <string name="editText_login_email">Email</string>
    <string name="editText_login_password">Password</string>
    <string name="button_login_login">Login</string>
    <string name="button_login_register">Register</string>

    <!--    register strings-->
    <string name="textView_register_title">Register</string>
    <string name="textView_verifyEmail_title">How to Verify Email</string>
    <string name="editText_register_firstName">First Name</string>
    <string name="editText_register_lastName">Last Name</string>
    <string name="editText_register_email">Email</string>
    <string name="editText_register_nickname">Nickname</string>
    <string name="editText_register_password">Password</string>
    <string name="editText_register_retypePassword">Retype Password</string>
    <string name="button_register_register">Register</string>
    <string name="editText_register_backToLogin">Back to Login</string>

    <!-- verify email strings-->
    <string name="textView_verifyEmail_instructions1">1. You will receive an email at the address provided.</string>
    <string name="textView_verifyEmail_instructions2">2. In the email there will be a link. Click the link to verify.</string>
    <string name="textView_verifyEmail_instructions3">3. Press back to login.</string>

    <!-- add contact strings -->
    <string name="editText_addContact_addContact">Look for Contacts</string>
    <string name="editText_addContact_enterUsername">Enter first/last name or username</string>
    <string name="button_addContact_sendRequest">Send</string>
    <string name="button_addContact_searchContacts">Search</string>
    <!--    navigation Home page  strings-->

    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Nickname</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="text_home_favorite">Your favorite chats</string>
    <!-- Settings button actions -->
    <string name="action_settings">Settings</string>
    <string name="action_logout">Logout</string>
    <string name="settings_addContact">Add Contact</string>
    <string name="settings_viewProfile">View Profile</string>
    <string name="settings_chat">Chat</string>
    <string name="settings_members">Members</string>

    <!-- Menu button string resource -->
    <string name="menu_home">Home</string>
    <string name="menu_connection">Connection</string>
    <string name="menu_contacts">Contacts</string>
    <string name="menu_chat">Chat</string>
    <string name="menu_weather">Weather</string>
    <string name="menu_weather_current">Current Weather</string>
    <string name="menu_weather_forecast">10 Day Forecast</string>
    <string name="menu_weather_forecast24">24 Hour Forecast</string>
    <string name="menu_share">Share</string>
    <string name="menu_notification">Notification</string>
    <string name="menu_groupchat">Group Chat</string>


    <!--    Web Service keys-->
    <string name="keys_json_jwt">token</string>
    <string name="key_json_contact_userid">userid</string>
    <string name="keys_json_success">success</string>
    <string name="keys_json_message">message</string>
    <string name="keys_json_messages">messages</string>
    <string name="keys_json_contact_email">email</string>
    <string name="keys_json_contact_username">username</string>
    <string name="keys_json_contact_firstname">firstname</string>
    <string name="keys_json_contact_lastname">lastname</string>
    <string name="keys_json_contact_usericon">usericon</string>
    <string name="keys_json_contacts_isEmailVerified">emailverified</string>
    <string name="keys_json_contacts_isContactVerified">contactverified</string>
    <string name="keys_json_contacts_requestNumber">requestnumber</string>
    <string name="keys_json_contacts_chatId">chatId</string>

    <string name="keys_contact_view">Random key</string>
    <string name="keys_chat_myemail">myemail</string>
    <string name="keys_chat_theiremail">theiremail</string>
    <string name="keys_chat_id">chatid</string>
    <string name="key_groupchat_chat">chats</string>
    <string name="textMessage">Text Message</string>
    <string name="MessageSend">SEND</string>

    <!--view profile -->
    <string name="image_viewProfile_icon">User Icon</string>


    <!--recycler view on contact -->
    <string name="editText_recycler_noContacts">You have no connections! Use the button above to find some.</string>
    <string name="editText_recycler_noSearchResults">No contacts were found with that criteria. Please try again!</string>
    <string name="editText_recycler_noContactsTitle">Uh oh!</string>

    <!--    recylce view on group chat-->
    <string name="editText_recycle_noGroupChat">You have no groups! Use the button to create your group.</string>
    <string name="editText_recycle_noGroupChatTitle">Uh oh!</string>

    <string name="editText_createGroup_title">Create Groups</string>
    <string name="editText__createGroup_hint">Enter your group name</string>
    <string name="button_createGroup_add">Add</string>
    <string name="button_createGrou_create">Create</string>
    <string name="text_createGroup_title">Select the users to add</string>


    <!--    recycler view on group contact-->
    <string name="text_groupChat_noConnections">You have no verified connections!</string>
    <!--    add group strings-->
    <string name="text_addGroup_title">Group Name</string>
    <string name="editText_addGroup_hint">Enter the name of your group!</string>
    <string name="button_addGroup_create">Create</string>

    <!-- key  -->
    <string name="key_chat">chat_key</string>
    <string name="search">Search</string>

    <string name="keys_shared_prefs">edu.uw.tcss450.phishapp.PREFS</string>
    <string name="keys_prefs_email">traffic_light_wont_let_me_through</string>
    <string name="keys_prefs_password">see_the_city_see_the_zoo</string>
    <string name="InputField">Text Message</string>

    <string name="editText_weather_save_location_text">Save location via search...</string>
    <string name="button_weather_save_location_text">Save</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="leaveGroup">LEAVE</string>
    <string name="toast_chat_favorited">Chat added to favorites</string>
    <string name="toast_chat_alreadyfavorite">Already a favorite</string>
    <string name="toast_chat_favoriteremoved">Favorite removed</string>
    <string name="toast_chat_favoritesfull">Favorites full</string>
    <string name="text_favoritebutton_delete">Remove favorite</string>


</resources>
