<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_addGroup"
        android:icon="@drawable/ic_group_addgroup"
        android:title="action_addGroup"
        android:visible="false"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_logout"
        android:orderInCategory="100"
        android:title="@string/action_logout"
        app:showAsAction="never" />

<!--<<<<<<< Updated upstream-->
    <item
        android:id="@+id/action_addContact"
        android:orderInCategory="100"
        android:title="@string/settings_addContact"
        android:icon="@drawable/ic_person_add_gold_24dp"
        app:showAsAction="always"
        android:visible="false" />
    <item
        android:id="@+id/action_viewOwnProfile"
        android:orderInCategory="100"
        android:title="@string/settings_viewProfile"
        app:showAsAction="always"
        android:visible="false" />
    <item
        android:id="@+id/action_chat"
        android:orderInCategory="100"
        android:title="@string/settings_chat"
        android:icon="@drawable/ic_chat_bubble_grey_24dp"
        app:showAsAction="always"
        android:visible="false" />


    <item
        android:id="@+id/action_display"
        android:orderInCategory="100"
        android:title="@string/settings_members"
        android:icon="@drawable/ic_group_display"
        app:showAsAction="always"
        android:visible="false" />
</menu>
